k8s/testlab/nexus/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonatype-registry
  namespace: nexus
  labels:
    app: sonatype-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonatype-registry
  template:
    metadata:
      labels:
        app: sonatype-registry
    spec:
      containers:
        - image: sonatype/nexus3
          name: nexus
          ports:
            - containerPort: 8081
          volumeMounts:
            - name: registry-vol
              mountPath: /nexus-data
              subPath: sonatype
      volumes:
        - name: registry-vol
          persistentVolumeClaim:
            claimName: pvc-nexus
