k8s/testlab/nexus/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nexus-http
  namespace: nexus
spec:
  parentRefs:
    - name: insecure
      namespace: gateway
  hostnames:
    - "nexus.lan"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: sonatype-service
          port: 8081
